[package]
name = "bevy_physics_take2"
version = "0.1.0"
edition = "2021"


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
trace = [
    "bevy/trace_chrome"
]

[dependencies]
bevy = { version = "0.6.0" }
bevy-inspector-egui = { version = "0.8.1" }
bevy_polyline = { version = "0.1.0" }
